# invert-kernel

./: .gitignore  .zenodo.json  ARTIFACTS.md  ARTIFACT_QUICKSTART.md  ARTIFACT_VERIFY_REPORT.md  CITATION.cff  KEY_OUTPUTS.sha256  LICENSE  MANIFEST_ZENODO.txt  PAPER_ARTIFACTS.md  PAPER_TO_ARTIFACT_MAP.md  README.md  RELEASE_METADATA_UPDATE_REPORT.md  RELEASE_TAG_REPORT.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
configs/: core_v2_bfs_dfs_pilot_local.yaml  core_v2_deterministic_randomized_pilot_local.yaml  core_v2_deterministic_randomized_pilot_local_repair.yaml  core_v2_eager_lazy_pilot_local.yaml  core_v2_euler_rk4_pilot.yaml  core_v2_euler_rk4_pilot_local.yaml  core_v2_euler_rk4_pilot_local_sweep.yaml  core_v2_generalization_local_bfs_dfs.yaml  core_v2_generalization_local_deterministic_randomized.yaml  core_v2_generalization_local_eager_lazy.yaml  core_v2_generalization_local_euler_rk4.yaml  core_v2_generalization_local_quadrature.yaml  core_v2_quadrature_pilot_local.yaml  experiment.yaml  models.yaml  pilot.yaml
docs/: EXTERNAL_FEASIBILITY_NOTE.md
prereg/: core_v2_tasks.json  normalizations.md  predictions.md
scripts/: activate_project_venv.sh  checksum_key_outputs.sh  export_paper_figures.py  regenerate_confirmatory_tables.sh  run_core_v2_eager_lazy_pilot_local_001.sh  run_core_v2_euler_rk4_pilot_001.sh  run_core_v2_euler_rk4_pilot_local_001.sh  run_core_v2_euler_rk4_pilot_local_sweep_001.sh  run_core_v2_generalization_local_bfs_dfs_001.sh  run_core_v2_generalization_local_deterministic_randomized_001.sh  run_core_v2_quadrature_pilot_local_001.sh  (+11 more)
(+1680 files in other folders)
