[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invert"
version = "1.0.1"
description = "INVERT Core v2 — artifact package for recovering deterministic process signatures from behaviorally equivalent LLM-generated code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
invert = "invert.cli:app"
invert-core = "invert_core.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/core_v2"]
pythonpath = ["src", "."]
